--- a/Wodsoft.ComBoost.Website/Views/en-us/Document/EntityFramework.cshtml
+++ b/Wodsoft.ComBoost.Website/Views/en-us/Document/EntityFramework.cshtml
@@ -75,17 +75,17 @@ EntityQueryable&lt;Member&gt; context = new EntityQueryable&lt;Member&gt;(new Da
     <div class="col-md-2">
         <div class="bs-docs-sidebar affix" data-spy="affix" data-offset-top="60" data-offset-bottom="200">
             <ul class="nav bs-docs-sidenav">
-                <li><a href="#installPackage">安装包</a></li>
-                <li><a href="#createContext">创建DbContext</a></li>
+                <li><a href="#installPackage">Install Package</a></li>
+                <li><a href="#createContext">Create DbContext</a></li>
                 <li>
-                    <a href="#use">使用</a>
+                    <a href="#use">Use</a>
                     <ul class="nav">
                         <li><a href="#use-EntityContextBuilder">EntityContextBuilder</a></li>
                         <li><a href="#use-EntityQueryable">EntityQueryable</a></li>
                     </ul>
                 </li>
             </ul>
-            <a class="back-to-top" href="#">顶部</a>
+            <a class="back-to-top" href="#">Back to top</a>
         </div>
     </div>
 </div>
