--- a/Wodsoft.ComBoost.Website/Views/en-us/Document/Mvc.cshtml
+++ b/Wodsoft.ComBoost.Website/Views/en-us/Document/Mvc.cshtml
@@ -522,44 +522,44 @@ DefaultEditor.cshtml
     <div class="col-md-2">
         <div class="bs-docs-sidebar affix" data-spy="affix" data-offset-top="60" data-offset-bottom="200">
             <ul class="nav bs-docs-sidenav">
-                <li><a href="#installPackage">安装包</a></li>
+                <li><a href="#installPackage">Install Package</a></li>
                 <li>
-                    <a href="#controller">无形参控制器</a>
+                    <a href="#controller">Non Generic Controller</a>
                     <ul class="nav">
-                        <li><a href="#controller-init">实例化</a></li>
-                        <li><a href="#controller-builder">EntityBuilder属性</a></li>
+                        <li><a href="#controller-init">Instantiation</a></li>
+                        <li><a href="#controller-builder">Property EntityBuilder</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#entityController">实体控制器</a>
+                    <a href="#entityController">Entity Controller</a>
                     <ul class="nav">
-                        <li><a href="#entityController-index">列表</a></li>
-                        <li><a href="#entityController-create">新增</a></li>
-                        <li><a href="#entityController-edit">编辑</a></li>
-                        <li><a href="#entityController-update">更新</a></li>
-                        <li><a href="#entityController-remove">删除</a></li>
-                        <li><a href="#entityController-detail">详细</a></li>
-                        <li><a href="#entityController-search">搜索</a></li>
-                        <li><a href="#entityController-selector">单项选择器</a></li>
-                        <li><a href="#entityController-multipleSelector">多项选择器</a></li>
+                        <li><a href="#entityController-index">List</a></li>
+                        <li><a href="#entityController-create">Create</a></li>
+                        <li><a href="#entityController-edit">Edit</a></li>
+                        <li><a href="#entityController-update">Update</a></li>
+                        <li><a href="#entityController-remove">Remove</a></li>
+                        <li><a href="#entityController-detail">Detail</a></li>
+                        <li><a href="#entityController-search">Search</a></li>
+                        <li><a href="#entityController-selector">Selector</a></li>
+                        <li><a href="#entityController-multipleSelector">Multiple Selector</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#interface">控制器接口</a>
+                    <a href="#interface">Interface of Controller</a>
                     <ul class="nav">
-                        <li><a href="#interface-file">保存文件</a></li>
-                        <li><a href="#interface-image">显示图片</a></li>
+                        <li><a href="#interface-file">Save File</a></li>
+                        <li><a href="#interface-image">Show Image</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#editor">编辑器</a>
+                    <a href="#editor">Editor</a>
                     <ul class="nav">
-                        <li><a href="#editor-default">默认</a></li>
-                        <li><a href="#editor-custom">自定义编辑器</a></li>
+                        <li><a href="#editor-default">Default</a></li>
+                        <li><a href="#editor-custom">Custom</a></li>
                     </ul>
                 </li>
             </ul>
-            <a class="back-to-top" href="#">顶部</a>
+            <a class="back-to-top" href="#">Back to top</a>
         </div>
     </div>
 </div>
