--- a/Wodsoft.ComBoost.Website/Views/en-us/Document/MvcBootstrap.cshtml
+++ b/Wodsoft.ComBoost.Website/Views/en-us/Document/MvcBootstrap.cshtml
@@ -46,10 +46,10 @@ PM> Install-Package ComBoost.Mvc.Bootstrap -Pre
     <div class="col-md-2">
         <div class="bs-docs-sidebar affix" data-spy="affix" data-offset-top="60" data-offset-bottom="200">
             <ul class="nav bs-docs-sidenav">
-                <li><a href="#installPackage">安装包</a></li>
-                <li><a href="#description">说明</a></li>
+                <li><a href="#installPackage">Install Package</a></li>
+                <li><a href="#description">Instruction</a></li>
             </ul>
-            <a class="back-to-top" href="#">顶部</a>
+            <a class="back-to-top" href="#">Back to top</a>
         </div>
     </div>
 </div>
