--- a/Wodsoft.ComBoost.Website/Views/zh-cn/Document/MvcQuickStart.cshtml
+++ b/Wodsoft.ComBoost.Website/Views/zh-cn/Document/MvcQuickStart.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Bootsrtap For ComBoost Mvc";
+    ViewBag.Title = "快速使用Mvc";
     Layout = "~/Views/" + (string)ViewContext.RouteData.Values["lang"] + "/Shared/_Layout.cshtml";
 }
 @Styles.Render("~/Content/docs.css")
