--- a/Wodsoft.ComBoost.Website/Views/en-us/Shared/_Layout.cshtml
+++ b/Wodsoft.ComBoost.Website/Views/en-us/Shared/_Layout.cshtml
@@ -21,10 +21,10 @@
                         <li><a href="@Url.Action("Entity","Document")">Entity</a></li>
                         <li class="disabled"><a href="#">Entity With Cache</a></li>
                         <li class="divider"></li>
-                        <li class="disabled"><a href="@Url.Action("EntityFramework","Document")">EntityFramework For ComBoost</a></li>
+                        <li><a href="@Url.Action("EntityFramework","Document")">EntityFramework For ComBoost</a></li>
                     </ul>
                 </li>
-                <li class="dropdown disabled">
+                <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Website <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="@Url.Action("Mvc","Document")">Asp.Net Mvc</a></li>
