--- a/Wodsoft.ComBoost.Website/Views/en-us/Document/Entity.cshtml
+++ b/Wodsoft.ComBoost.Website/Views/en-us/Document/Entity.cshtml
@@ -60,8 +60,8 @@ public class Member : UserBase
             <div class="page-header" id="property">
                 <h1>Propery Attribute</h1>
             </div>
-            <p>这些特性用于属性。</p>
-            <h3 id="property-ColumnAttribute">ColumnAttribute<small>数据库类型</small></h3>
+            <p>These attributes can be used by entity property.</p>
+            <h3 id="property-ColumnAttribute">ColumnAttribute<small>Database Type</small></h3>
             <p>该特性一般用于手动设定数据库字段类型。</p>
             <p>例如常用于设定<code>DateTime</code>类型的属性。</p>
 <pre>
