--- a/Wodsoft.ComBoost.Website/Views/en-us/Shared/_Layout.cshtml
+++ b/Wodsoft.ComBoost.Website/Views/en-us/Shared/_Layout.cshtml
@@ -31,6 +31,8 @@
                         <li class="divider"></li>
                         <li><a href="@Url.Action("MvcBootstrap","Document")">Bootstrap Style</a></li>
                         <li><a href="@Url.Action("MvcUnity","Document")">Unity IOC</a></li>
+                        <li class="divider"></li>
+                        <li><a href="@Url.Action("MvcSample","Document")">Sample</a></li>
                     </ul>
                 </li>
                 <li class="dropdown disabled">
