--- a/Wodsoft.ComBoost.Website/Views/zh-cn/Shared/_Layout.cshtml
+++ b/Wodsoft.ComBoost.Website/Views/zh-cn/Shared/_Layout.cshtml
@@ -31,6 +31,8 @@
                         <li class="divider"></li>
                         <li><a href="@Url.Action("MvcBootstrap","Document")">Bootstrap风格</a></li>
                         <li><a href="@Url.Action("MvcUnity","Document")">Unity依赖注入</a></li>
+                        <li class="divider"></li>
+                        <li><a href="@Url.Action("MvcSample","Document")">例子</a></li>
                     </ul>
                 </li>
                 <li class="dropdown disabled">
