--- a/Wodsoft.ComBoost.Website/Views/en-us/Document/MvcSample.cshtml
+++ b/Wodsoft.ComBoost.Website/Views/en-us/Document/MvcSample.cshtml
@@ -129,6 +129,7 @@ public UnityControllerFactory(IUnityContainer container)
             <p><img src="~/Content/Images/MvcSample/Sample5.png" /></p>
             <p><img src="~/Content/Images/MvcSample/Sample6.png" /></p>
             <div class="alert alert-info">这是个最基础的用例，实际情况您需要对<code>_Layout.cshtml</code>进行编辑，更有可能创建控制器实现其它功能，详情请看相关文档。</div>
+            <p>示例项目文件下载：<a href="~/MvcSample.rar">MvcSample.rar</a></p>
         </div>
     </div>
     <div class="col-md-2">
