--- a/Wodsoft.ComBoost.Website/Views/en-us/Shared/_Layout.cshtml
+++ b/Wodsoft.ComBoost.Website/Views/en-us/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">ComBoost</a>
+                <a class="navbar-brand" href="@Url.Action("Index","Home")">ComBoost</a>
             </div>
             <ul class="nav navbar-nav">
                 <li><a href="@Url.Action("Start","Document")">Quick Start</a></li>
