--- a/Samples/Company.Mvc/Views/Shared/MultipleSelector.cshtml
+++ b/Samples/Company.Mvc/Views/Shared/MultipleSelector.cshtml
@@ -45,10 +45,7 @@
     </div>
 </div>
 <div class="row">
-    @*<div class="col-md-6">
-        @Html.PaginationButton(Model)
-    </div>*@
     <div class="col-md-12 text-center">
-        @Html.Pagination(Model)
+        @{Html.Pagination(Model);}
     </div>
 </div>
