--- a/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/Index.cshtml
+++ b/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/Index.cshtml
@@ -102,7 +102,7 @@
                 </table>
                 <div class="row">
                     <div class="col-md-4">
-                        @Html.PaginationButton(Model)
+                        @{Html.PaginationButton(Model);}
                     </div>
                     <div class="col-md-4 text-center">
                         <div class="btn-group">
@@ -122,7 +122,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 text-right">
-                        @Html.Pagination(Model);
+                        @{Html.Pagination(Model);}
                     </div>
                 </div>
             </div>
