--- a/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/Index.cshtml
+++ b/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/Index.cshtml
@@ -74,7 +74,7 @@
                             <tr>
                                 @for (int b = 0; b < Model.Headers.Length; b++)
                                 {
-                                    <td>@EntityValueConverter.GetConverter(Model.Headers[b].Property.PropertyType).ConvertToString(Model.Headers[b].Property.GetValue(Model.Items[i]))</td>
+                                    <td>@EntityValueConverter.GetConverter(Model.Headers[b]).ConvertToString(Model.Headers[b].Property.GetValue(Model.Items[i]))</td>
                                 }
                                 <td class="text-center" style="width: 64px;">
                                     <div class="btn-group btn-group-xs">
