--- a/Samples/Company.Mvc/Views/Shared/Index.cshtml
+++ b/Samples/Company.Mvc/Views/Shared/Index.cshtml
@@ -11,6 +11,10 @@
         Layout = "~/Areas/" + area.ToString() + "/Views/Shared/_Layout.cshtml";
     }
 }
+<ol class="breadcrumb">
+    <li><a href="@Url.Action("Index","Home")">Home</a></li>
+    <li class="active">@Model.Metadata.Name</li>
+</ol>
 @if (Model.SearchItem.Length > 0)
 {
     <div class="alert alert-success alert-dismissable">
@@ -74,7 +78,7 @@
                             <tr>
                                 @for (int b = 0; b < Model.Headers.Length; b++)
                                 {
-                                    <td>@EntityValueConverter.GetConverter(Model.Headers[b].Property.PropertyType).ConvertToString(Model.Headers[b].Property.GetValue(Model.Items[i]))</td>
+                                    <td>@EntityValueConverter.GetConverter(Model.Headers[b]).ConvertToString(Model.Headers[b].Property.GetValue(Model.Items[i]))</td>
                                 }
                                 <td class="text-center" style="width: 64px;">
                                     <div class="btn-group btn-group-xs">
@@ -82,9 +86,15 @@
                                             <span class="caret"></span>
                                         </a>
                                         <ul class="dropdown-menu">
-                                            <li><a class="btn" href="@Html.Raw(Url.Action("Edit", new { id = Model.Items[i].Index }))"><i class="glyphicon glyphicon-edit"></i>Edit</a></li>
-                                            <li><a class="btn" href="javascript:remove('@Model.Items[i].Index')"><i class="glyphicon glyphicon-remove"></i>Delete</a></li>
-                                            @*<li class="divider"></li>*@
+                                            <li><a class="btn" href="@Html.Raw(Url.Action("Detail", new { id = Model.Items[i].Index }))"><i class="glyphicon glyphicon-edit"></i>Detail</a></li>
+                                            @if (Model.Metadata.EditRoles.All(t => User.IsInRole(t)))
+                                            {
+                                                <li><a class="btn" href="@Html.Raw(Url.Action("Edit", new { id = Model.Items[i].Index }))"><i class="glyphicon glyphicon-edit"></i>Edit</a></li>
+                                            }
+                                            @if (Model.Metadata.RemoveRoles.All(t => User.IsInRole(t)))
+                                            {
+                                                <li><a class="btn" href="javascript:remove('@Model.Items[i].Index')"><i class="glyphicon glyphicon-remove"></i>Delete</a></li>
+                                            }
                                             @for (int c = 0; c < Model.Buttons.Length; c++)
                                             {
                                                 MvcViewButton button = Model.Buttons[c] as MvcViewButton;
@@ -106,7 +116,10 @@
                     </div>
                     <div class="col-md-4 text-center">
                         <div class="btn-group">
-                            <a href="@Html.Raw(Url.Action("Create"))" class="btn btn-default">Create</a>
+                            @if (Model.Metadata.AddRoles.All(t => User.IsInRole(t)))
+                            {
+                                <a href="@Html.Raw(Url.Action("Create"))" class="btn btn-default">Create</a>
+                            }
                             @if (Model.Metadata.SearchProperties.Length > 0)
                             {
                                 <a href="@Html.Raw(Url.Action("Search"))" class="btn btn-default">Search</a>
