--- a/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/Index.cshtml
+++ b/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/Index.cshtml
@@ -86,7 +86,7 @@
                                             <span class="caret"></span>
                                         </a>
                                         <ul class="dropdown-menu">
-                                            <li><a class="btn" href="@Html.Raw(Url.Action("Detail", new { id = Model.Items[i].Index }))"><i class="glyphicon glyphicon-edit"></i>Detail</a></li>
+                                            <li><a class="btn" href="@Html.Raw(Url.Action("Detail", new { id = Model.Items[i].Index }))"><i class="glyphicon glyphicon-list-alt"></i>Detail</a></li>
                                             @if (Model.Metadata.EditRoles.All(t => User.IsInRole(t)))
                                             {
                                                 <li><a class="btn" href="@Html.Raw(Url.Action("Edit", new { id = Model.Items[i].Index }))"><i class="glyphicon glyphicon-edit"></i>Edit</a></li>
@@ -100,7 +100,7 @@
                                                 MvcViewButton button = Model.Buttons[c] as MvcViewButton;
                                                 if (button != null && button.GetLink != null)
                                                 {
-                                                    <li><a href="@Html.Raw(button.GetLink(Url, Model.Items[i]))">@Html.Raw(button.Name)</a></li>
+                                                    <li><a href="@Html.Raw(button.GetLink(Url, Model.Items[i]))">@Html.Raw(button.Icon)@Html.Raw(button.Name)</a></li>
                                                 }
                                             }
                                         </ul>
@@ -129,7 +129,7 @@
                                 MvcViewButton button = Model.Buttons[i] as MvcViewButton;
                                 if (button != null && button.StaticLink != null)
                                 {
-                                    <a href="@Html.Raw(button.StaticLink)" class="btn btn-default">@Html.Raw(button.Name)</a>
+                                    <a href="@Html.Raw(button.StaticLink)" class="btn btn-default">@Html.Raw(button.Icon)@Html.Raw(button.Name)</a>
                                 }
                             }
                         </div>
