--- a/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/Index.cshtml
+++ b/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/Index.cshtml
@@ -67,7 +67,7 @@
                         <tr>
                             @for (int i = 0; i < Model.Headers.Length; i++)
                             {
-                                <td title="@Model.Headers[i].Description">@Model.Headers[i].Name</td>
+                                <td title="@Model.Headers[i].Description">@(Model.Headers[i].ShortName ?? Model.Headers[i].Name)</td>
                             }
                             <td>Operation</td>
                         </tr>
