--- a/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/Selector.cshtml
+++ b/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/Selector.cshtml
@@ -23,7 +23,7 @@
                     <td width="36"></td>
                     @for (int i = 0; i < Model.Headers.Length; i++)
                     {
-                        <td title="@Model.Headers[i].Description">@Model.Headers[i].Name</td>
+                        <td title="@Model.Headers[i].Description">@(Model.Headers[i].ShortName ?? Model.Headers[i].Name)</td>
                     }
                 </tr>
             </thead>
