--- a/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/Selector.cshtml
+++ b/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/Selector.cshtml
@@ -45,7 +45,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-6 text-right">
+    <div class="col-md-12 text-center">
         @{Html.Pagination(Model);}
     </div>
 </div>
