--- a/Wodsoft.ComBoost.Website/Views/zh-cn/Shared/_Layout.cshtml
+++ b/Wodsoft.ComBoost.Website/Views/zh-cn/Shared/_Layout.cshtml
@@ -88,6 +88,8 @@
         $('#language').change(function () {
             window.location.href = $(this).val();
         });
+        var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+        document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fd2264471b69cb2abd53f1d182a9f1660' type='text/javascript'%3E%3C/script%3E"));
     </script>
 </body>
 </html>
