--- a/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/TimeEditor.cshtml
+++ b/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/TimeEditor.cshtml
@@ -1,10 +1,10 @@
 ﻿@model MvcEditorModel
 <div class="input-group col-md-4" id="@Model.Metadata.Property.Name">
-    <input type="number" id="@(Model.Metadata.Property.Name)_Hour" min="0" class="form-control text-center" value="@(((TimeSpan)Model.Value).TotalHours)">
+    <input type="number" id="@(Model.Metadata.Property.Name)_Hour" min="0" step="1" class="form-control text-center" value="@(((TimeSpan)Model.Value).TotalHours)">
     <span class="input-group-addon">@System.Globalization.CultureInfo.CurrentUICulture.DateTimeFormat.TimeSeparator</span>
-    <input type="number" id="@(Model.Metadata.Property.Name)_Minute" min="0" max="59" class="form-control text-center" value="@(((TimeSpan)Model.Value).Minutes)">
+    <input type="number" id="@(Model.Metadata.Property.Name)_Minute" min="0" max="59" step="1" class="form-control text-center" value="@(((TimeSpan)Model.Value).Minutes)">
     <span class="input-group-addon">@System.Globalization.CultureInfo.CurrentUICulture.DateTimeFormat.TimeSeparator</span>
-    <input type="number" id="@(Model.Metadata.Property.Name)_Seconds" min="0" max="59" class="form-control text-center"  value="@(((TimeSpan)Model.Value).Seconds)">
+    <input type="number" id="@(Model.Metadata.Property.Name)_Seconds" min="0" max="59" step="1" class="form-control text-center" value="@(((TimeSpan)Model.Value).Seconds)">
 </div>
 <input type="hidden" id="@(Model.Metadata.Property.Name)_Value" name="@Model.Metadata.Property.Name" value="@Model.Value" />
 <script type="text/javascript">
