fix alignment for operator menu

--- a/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/Index.cshtml
+++ b/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/Index.cshtml
@@ -81,7 +81,7 @@
                                     <td>@EntityValueConverter.GetConverter(Model.Headers[b]).ConvertToString(Model.Headers[b].Property.GetValue(Model.Items[i]))</td>
                                 }
                                 <td class="text-center" style="width: 64px;">
-                                    <div class="btn-group btn-group-xs">
+                                    <div class="btn-group btn-group-xs text-left">
                                         <a class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#">
                                             <span class="caret"></span>
                                         </a>
