add valueFilter feature

--- a/Wodsoft.ComBoost.Mvc/MetroUICss/Views/Shared/CollectionEditor.cshtml
+++ b/Wodsoft.ComBoost.Mvc/MetroUICss/Views/Shared/CollectionEditor.cshtml
@@ -33,7 +33,7 @@
             update();
         });
         clear.click(function () {
-            select.html('');
+            select.empty();
             value.val('');
         });
         function initSelector(result) {
