--- a/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/CollectionEditor.cshtml
+++ b/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/CollectionEditor.cshtml
@@ -35,7 +35,7 @@
             update();
         });
         clear.click(function () {
-            select.html('');
+            select.empty();
             value.val('');
         });
         function initSelector(result) {
